--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="Images/Me.png" alt="Fat gamer"></td>
+            <td><img src="images/Me.png" alt="Fat gamer"></td>
             <td><h1>Sebastion Whittinghill</h1>
             <p><em>Student <strong> Coder</strong></em></p>
             <p>I'm a student learning to code with Udemy.</p></td>
